refactor to use records